# linuxdeployqt

tools/linuxdeployqt/: CMakeLists.txt  main.cpp  shared.cpp
